--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real-Time CSV Data</title>
+    <title>CSV Data Display</title>
     <style>
         table {
             width: 100%;
@@ -71,9 +71,8 @@
         }
     }
 
-    // Fetch the data initially and set up periodic updates (optional)
+    // Fetch the data initially
     fetchCSVData();
-    setInterval(fetchCSVData, 5000);  // Update every 5 seconds
 </script>
 
 </body>
